# Model-Stealing-Detection-System

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
scripts/: train_models.py
src/: __init__.py
src/data/: __init__.py  synthetic.py
src/defenses/: __init__.py  api_defenses.py
src/eval/: __init__.py  metrics.py
src/features/: __init__.py  query_features.py
src/utils/: __init__.py  device.py  logging.py
src/viz/: __init__.py  explainability.py
tests/: __init__.py  test_models.py
